# filename-replace

./: CMakeLists.txt  README.md  main.cpp  textfinder.cpp  textfinder.h  textfinder.pro  textfinder.qrc
forms/: input.txt  textfinder.ui  textfinder.xml
